# dsa

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: cmake-multi-platform.yml
docs/: Doxyfile
include/dsa/: comparator.hpp  comparators.hpp  dsa.hpp
include/dsa/detail/: container_traits.hpp
include/dsa/sorting/: insertion_sort.hpp  sorting.hpp
src/: CMakeLists.txt
src/dsa/: dsa.cpp
tests/src/: CMakeLists.txt  main.cpp
tests/src/dsa/sorting/: insertion_sort.test.cpp
